Add all modules flags